--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
 
 
     <section class="capacity">
-        <div class="left-part">
+        <div class="left-part hide-mobile">
             <img class="hide-mobile" src="./img/img3.png" alt="">
         </div>
 
